auto-test/tests/chapter_15/invalid_parse/malformed_abstract_array_declarator.c
int main(void) {
    
    
    return (int[3] *)0;
}